set sgeenv to hpc cluster